# predict-scf

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.dvc/: config
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml
app/: __init__.py
app/schemas/: __init__.py
configs/: api_config.yaml  model_config.yaml  training_config.yaml
docs/adr/: ADR-001-serving-architecture.md  README.md
docs/design/: system-architecture.md
docs/research/: efthymiou-1988.md
docs/runbooks/: deploying-new-model.md  local-dev-setup.md
docs/standards/: api-rp-2a-classification.md  dnv-rp-c203-summary.md
pipelines/: __init__.py
pipelines/filters/: __init__.py
pipelines/training/: __init__.py
src/scf_surrogate/: __init__.py  exceptions.py
src/scf_surrogate/equations/: __init__.py
src/scf_surrogate/joints/: __init__.py  taxonomy.py
tests/: conftest.py
tests/unit/: test_taxonomy.py
