[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scf-surrogate"
version = "0.1.0"
description = "ML surrogate for offshore tubular joint SCF prediction"
authors = [{ name = "Navin", email = "navin@ark2tech.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pydantic>=2.5",
    "structlog>=23.2",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "mlflow>=2.8",
]
train = [
    "xgboost>=2.0",
    "scikit-learn>=1.3",
    "pyarrow>=14.0",
    "mlflow>=2.8",
    "dvc>=3.30",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
    "mypy>=1.7",
    "ruff>=0.1",
    "pandas-stubs>=2.1",
    "types-PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["xgboost.*", "mlflow.*", "dvc.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "pipelines", "app", "tests"]

[tool.ruff.lint]
select = ["E","W","F","I","N","UP","ANN","D","S","PTH"]
ignore = ["D203","D213","ANN101","ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101","ANN","D"]
"scripts/*" = ["ANN","D"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers","--tb=short","-v"]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
    "e2e: marks end-to-end tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*","scripts/*","notebooks/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
